# xtractic-ai

./: .gitignore  README.md  etl_agent.py  requirements.txt
agents/: __init__.py  main.py
agents/core/: etl_agent.py
agents/examples/sample_workflow2/: run-app.py
agents/examples/sample_workflow5/: cdsw-build.sh  workbench.py
agents/file-to-relational-template/: workflow_template.json
agents/pdf-to-relationala-template/: workflow_template.json
agents/tools/: db_utils.py  pdf_processor.py
api/: .env.example  .gitignore  CLOUDERA_SETUP.md  README.md  README_WORKFLOW.md  WORKFLOW_API.md  __init__.py  create_tables.sql  main.py  requirements.txt  start.sh  test_workflow.py
api/core/: config.py  database.py  models.py
api/docs/: WORKFLOW_SUBMISSION.md
api/migrations/: README.md  add_workflow_submissions_table.sql
api/routers/: ai.py  chat.py  datasets.py  etl.py  mcp.py  rag.py  stats.py  workflows.py
api/scripts/: check_db_connections.py
api/services/: ai_service.py  cloudera_service.py  dataset_service.py  etl_service.py  event_listener_service.py  mcp_service.py  rag_service.py  stats_service.py  workflow_service.py
api/tests/: conftest.py  test_api.py  test_workflows.py
api/utils/: __init__.py  cloudera_utils.py  helpers.py
mcp/: README.md
mcp/examples/acled-mcp/: acled.py  pyproject.toml
mcp/examples/fewsnet-mcp/: .gitignore  main.py  pyproject.toml
mcp/examples/flink-ssb-mcp/: KNOX_SETUP.md  README.md  claude_desktop_config.json  knox-init.sh  knox-simple-init.sh  pyproject.toml  run_mcp_server.sh  test_mcp_server.py
mcp/examples/flink-ssb-mcp/Testing/: TEST_RESULTS.md  __init__.py  mcp_test_results_20251009_113103.json  quick_test.py  run_tests.py  test_all_mcp_features.py  test_config.py
mcp/examples/flink-ssb-mcp/knox-config/: gateway-site.xml  ssb.xml
mcp/examples/flink-ssb-mcp/knox-config/topologies/: default.xml  ssb.xml
mcp/examples/flink-ssb-mcp/src/ssb_mcp_server/: __init__.py  auth.py  client.py  config.py  server.py
mcp/examples/iceberg-impala-mcp/: NOTICE.txt  README.md  pyproject.toml
mcp/examples/iceberg-impala-mcp/examples/: langchain-example.ipynb  openai-agentsdk-example.ipynb
mcp/examples/iceberg-impala-mcp/src/iceberg_mcp_server/: server.py
mcp/examples/iceberg-impala-mcp/src/iceberg_mcp_server/tools/: impala_tools.py
mcp/examples/nifi-mcp/: README.md  pyproject.toml
mcp/examples/nifi-mcp/src/nifi_mcp_server/: __init__.py  auth.py  best_practices.py  client.py  config.py  flow_builder.py  server.py  setup_helper.py
mcp/examples/smm-mcp/: .gitignore  LimitationsREADME.md  Makefile  README.md  StockPriceToKafka.json  claude_desktop_config.json  docker-compose.yml  example_cdp_config.json  example_config.json  example_knox_config.json  example_knox_userpass_config.json  pyproject.toml  run_mcp_server.sh
mcp/examples/smm-mcp/Testing/: README.md  run_tests.py  test_all_mcp_tools_comprehensive.py  test_all_mcp_tools_fixed.py  test_connection.py  test_connection_uv.py  test_fixed_endpoints.py  test_knox_connection.py  test_knox_mcp_server.py  test_mcp_server.py  test_phase1_methods.py  test_smm_connection.py
mcp/examples/smm-mcp/src/ssm_mcp_server/: __init__.py  auth.py  client.py  config.py  server.py
mcp/examples/x-social-mcp-server/: pyproject.toml  x.py
mcp/examples/xtractic-postgres-mcp/: .gitignore  README.md  claude_desktop_config.json  pyproject.toml  (+1 more)
(+83 files in other folders)
